@@ -2,6 +2,9 @@
 
 	* Fix help: It got broken while rearranging the plugin stuff, now it's
 	properly fixed.
+	* New Auth Framework: forgot to create the InvalidPassword exception.
+	It's a RuntimeError now.
+	* Fix help: this time for real (or so I hope).
 
 2006-08-12  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
 
